iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_0_oss1.local_29.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405889b39500c29414280ce23c33",
    "scsi80": "SLIO-ORG ost16           889b3950-0c29-4142-80ce-23c33057b739",
    "major": "8",
    "minor": "176",
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:15/block/sdl",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "12515635525876534458",
    "fs_label": "ost7",
    "paths": [
      "/dev/disk/by-id/scsi-36001405889b39500c29414280ce23c33",
      "/dev/disk/by-id/wwn-0x6001405889b39500c29414280ce23c33",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-15",
      "/dev/disk/by-label/ost7",
      "/dev/disk/by-uuid/12515635525876534458",
      "/dev/sdl"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-5",
          "serial": "36001405889b39500c29414280ce23c33",
          "scsi80": "SLIO-ORG ost16           889b3950-0c29-4142-80ce-23c33057b739",
          "dm_name": "mpathh",
          "size": 5368709120,
          "major": "253",
          "minor": "5",
          "filesystem_type": "zfs_member",
          "fs_uuid": "12515635525876534458",
          "fs_label": "ost7",
          "paths": [
            "/dev/mapper/mpathh",
            "/dev/disk/by-id/dm-name-mpathh",
            "/dev/disk/by-id/dm-uuid-mpath-36001405889b39500c29414280ce23c33",
            "/dev/disk/by-label/ost7",
            "/dev/disk/by-uuid/12515635525876534458",
            "/dev/dm-5"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
